correcções na documentação
